testsuite/tests/grammar/invalid_error_node/test_derived.lkt
import common

class BaseErrorDecl: FooNode implements ErrorNode {
}

@synthetic class ErrorDecl: BaseErrorDecl {
}
